# BAL-Pf2

./: README.md  makefile  pyproject.toml
.github/workflows/: build.yml
pf2/: correlation.py  data_import.py  gene_analysis.py  predict.py  tensor.py  utilities.py
pf2/data/: accuracies.csv  auc_rocs.csv  meta_correlates_summary.csv  meta_groupings_summary.csv  tableS3a.csv  tableS3b.csv  topp_fun_cmp25.csv  topp_fun_cmp26.csv  topp_fun_cmp46.csv  topp_fun_cmp8.csv  topp_fun_cmp9.csv
pf2/figures/: common.py  component_associations.py  figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figureA1.py  figureA10.py  figureA11.py  figureA12.py  figureA13.py  figureA14.py  figureA15.py  figureA16.py  figureA17.py  figureA18.py  figureA19.py  figureA1d_g.py  figureA1h_i.py  figureA2.py  figureA2d_j.py  figureA3.py  figureA3a.py  figureA3b_c.py  figureA3b_e.py  figureA3d_g.py  figureA4.py  figureA4a_6a.py  figureA4b_c.py  figureA4b_i.py  figureA4d_g.py  figureA4j_m.py  figureA4n.py  figureA5.py  figureA5a_6a.py  figureA5b_d.py  figureA5b_i.py  figureA5e.py  figureA5f.py  (+77 more)
pf2/figures/commonFuncs/: plotFactors.py  plotGeneral.py  plotPaCMAP.py
