[tool.poetry]
name = "pf2"
version = "0.1.0"
description = "Capturing determinants of pneumonia mortality."
authors = ["Jackson L. Chin <JacksonLymanChin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.3"
scanpy = "^1.9.6"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
tensorly = "^0.8.1"
numpy = "^1.26.2"
parafac2 = {git = "https://github.com/meyer-lab/parafac2.git"}
pacmap = "^0.7.1"
anndata = "^0.10.3"
tlviz = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fbuild = "pf2.figures.common:genFigure"
factor = "pf2.data_import:factorSave"

[tool.black]
line-length = 80
