[tool.poetry]
name = "pf2"
version = "0.1.0"
description = "Capturing determinants of pneumonia mortality."
authors = ["Jackson L. Chin <JacksonLymanChin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.3"
scanpy = "^1.9.6"
matplotlib = "^3.9"
scikit-learn = "^1.5"
tensorly = "^0.8.1"
numpy = "^1.26.2"
parafac2 = { git = "https://github.com/meyer-lab/parafac2.git"}
pacmap = "^0.7.3"
anndata = "^0.10.3"
tlviz = "^0.1.1"
datashader = "^0.16.2"
dask = {extras = ["dataframe"], version = "^2024.5.0"}
setuptools = "^70.0"
doubletdetection = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
mypy = "^1.10"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fbuild = "pf2.figures.common:genFigure"
factor = "pf2.tensor:make_factors"

[tool.black]
line-length = 80
